--- a/202001097.md
+++ b/202001097.md
@@ -1,1 +1,21 @@
 # Lab-7_202001097
+
+# Section - A
+
+
+# Programs
+
+* P1 - The function linearSearch searches for a value v in an array of integers a. If v appears in the array
+a, then the function returns the first index i, such that a[i] == v; otherwise, -1 is returned.
+
+int linearSearch(int v, int a[])
+{
+int i = 0;
+while (i < a.length)
+{
+if (a[i] == v)
+return(i);
+i++;
+}
+return (-1);
+}
