--- a/202001097.md
+++ b/202001097.md
@@ -19,3 +19,103 @@ i++;
 }
 return (-1);
 }
+
+
+* P2 - The function countItem returns the number of times a value v appears in an array of integers a.
+
+int countItem(int v, int a[])
+{
+int count = 0;
+for (int i = 0; i < a.length; i++)
+{
+if (a[i] == v)
+count++;
+}
+return (count);
+}
+
+
+* P3 - The function binarySearch searches for a value v in an ordered array of integers a. If v appears in
+the array a, then the function returns an index i, such that a[i] == v; otherwise, -1 is returned.
+Assumption: the elements in the array a are sorted in non-decreasing order.
+
+int binarySearch(int v, int a[])
+{
+int lo,mid,hi;
+lo = 0;
+hi = a.length-1;
+while (lo <= hi)
+{
+mid = (lo+hi)/2;
+if (v == a[mid])
+return (mid);
+else if (v < a[mid])
+hi = mid-1;
+else
+lo = mid+1;
+}
+return(-1);
+}
+
+* P4 - The following problem has been adapted from The Art of Software Testing, by G. Myers (1979). The
+function triangle takes three integer parameters that are interpreted as the lengths of the sides of a
+triangle. It returns whether the triangle is equilateral (three lengths equal), isosceles (two lengths equal),
+scalene (no lengths equal), or invalid (impossible lengths).
+
+final int EQUILATERAL = 0;
+final int ISOSCELES = 1;
+final int SCALENE = 2;
+final int INVALID = 3;
+int triangle(int a, int b, int c)
+{
+if (a >= b+c || b >= a+c || c >= a+b)
+return(INVALID);
+if (a == b && b == c)
+return(EQUILATERAL);
+if (a == b || a == c || b == c)
+return(ISOSCELES);
+return(SCALENE);
+}
+
+* P5 - The function prefix (String s1, String s2) returns whether or not the string s1 is a prefix
+of string s2 (you may assume that neither s1 nor s2 is null).
+
+public static boolean prefix(String s1, String s2)
+{
+if (s1.length() > s2.length())
+{
+return false;
+}
+for (int i = 0; i < s1.length(); i++)
+{
+if (s1.charAt(i) != s2.charAt(i))
+{
+return false;
+}
+}
+return true;
+}
+
+
+* P6 - Consider again the triangle classification program (P4) with a slightly different specification: The program
+reads floating values from the standard input. The three values A, B, and C are interpreted as
+representing the lengths of the sides of a triangle. The program then prints a message to the standard output
+that states whether the triangle, if it can be formed, is scalene, isosceles, equilateral, or right angled.
+Determine the following for the above program:
+
+a) Identify the equivalence classes for the system
+
+b) Identify test cases to cover the identified equivalence classes. Also, explicitly mention which test case would cover which equivalence class.
+(Hint: you must need to be ensure that the identified set of test cases cover all identified equivalence classes)
+
+c) For the boundary condition A + B > C case (scalene triangle), identify test cases to verify the boundary.
+
+d) For the boundary condition A = C case (isosceles triangle), identify test cases to verify the boundary.
+
+e) For the boundary condition A = B = C case (equilateral triangle), identify test cases to verify the boundary.
+
+f) For the boundary condition A2 + B2 = C2 case (right-angle triangle), identify test cases to verify the boundary.
+
+g) For the non-triangle case, identify test cases to explore the boundary.
+
+h) For non-positive input, identify test points.
