--- a/202001097.md
+++ b/202001097.md
@@ -5,7 +5,8 @@
 
 # Programs
 
-* P1 - The function linearSearch searches for a value v in an array of integers a. If v appears in the array
+# P1 
+- The function linearSearch searches for a value v in an array of integers a. If v appears in the array
 a, then the function returns the first index i, such that a[i] == v; otherwise, -1 is returned.
 
 int linearSearch(int v, int a[])
@@ -21,7 +22,8 @@ return (-1);
 }
 
 
-* P2 - The function countItem returns the number of times a value v appears in an array of integers a.
+# P2 
+- The function countItem returns the number of times a value v appears in an array of integers a.
 
 int countItem(int v, int a[])
 {
@@ -35,7 +37,8 @@ return (count);
 }
 
 
-* P3 - The function binarySearch searches for a value v in an ordered array of integers a. If v appears in
+# P3 
+- The function binarySearch searches for a value v in an ordered array of integers a. If v appears in
 the array a, then the function returns an index i, such that a[i] == v; otherwise, -1 is returned.
 Assumption: the elements in the array a are sorted in non-decreasing order.
 
@@ -57,7 +60,8 @@ lo = mid+1;
 return(-1);
 }
 
-* P4 - The following problem has been adapted from The Art of Software Testing, by G. Myers (1979). The
+# P4 
+- The following problem has been adapted from The Art of Software Testing, by G. Myers (1979). The
 function triangle takes three integer parameters that are interpreted as the lengths of the sides of a
 triangle. It returns whether the triangle is equilateral (three lengths equal), isosceles (two lengths equal),
 scalene (no lengths equal), or invalid (impossible lengths).
@@ -77,7 +81,8 @@ return(ISOSCELES);
 return(SCALENE);
 }
 
-* P5 - The function prefix (String s1, String s2) returns whether or not the string s1 is a prefix
+# P5 
+- The function prefix (String s1, String s2) returns whether or not the string s1 is a prefix
 of string s2 (you may assume that neither s1 nor s2 is null).
 
 public static boolean prefix(String s1, String s2)
@@ -97,7 +102,8 @@ return true;
 }
 
 
-* P6 - Consider again the triangle classification program (P4) with a slightly different specification: The program
+# P6 
+- Consider again the triangle classification program (P4) with a slightly different specification: The program
 reads floating values from the standard input. The three values A, B, and C are interpreted as
 representing the lengths of the sides of a triangle. The program then prints a message to the standard output
 that states whether the triangle, if it can be formed, is scalene, isosceles, equilateral, or right angled.
