--- a/202001097.md
+++ b/202001097.md
@@ -21,6 +21,26 @@ i++;
 return (-1);
 }
 
+* Test Cases
+
+1. v = 3; a[] = {1,2,3}; expected = 2
+
+Test case passed!
+
+![image](https://user-images.githubusercontent.com/123479469/231426798-50bef4db-d919-49d8-ba82-cccd5157cf6e.png)
+
+2. v = 3; a[] = {1,2,4,5}; expected = 2
+
+Test case failed!
+
+![image](https://user-images.githubusercontent.com/123479469/231427614-cc32019d-b09a-49e5-b57a-b390b5f8e20d.png)
+
+3. v = 3; a[] = {}; expected =-1;
+
+Test case Passed!
+
+
+
 
 # P2 
 - The function countItem returns the number of times a value v appears in an array of integers a.
