--- a/202001097.md
+++ b/202001097.md
@@ -9,17 +9,19 @@
 - The function linearSearch searches for a value v in an array of integers a. If v appears in the array
 a, then the function returns the first index i, such that a[i] == v; otherwise, -1 is returned.
 
-int linearSearch(int v, int a[])
-{
-int i = 0;
-while (i < a.length)
-{
-if (a[i] == v)
-return(i);
-i++;
+public class lab7_1 {
+	public static int linearSearch(int v, int[] a) {
+	    int i = 0;
+	    while (i < a.length) {
+	        if (a[i] == v) {
+	            return i;
+	        }
+	        i++;
+	    }
+	    return -1;
+	}
 }
-return (-1);
-}
+
 
 * Test Cases
 
@@ -39,7 +41,13 @@ Test case failed!
 
 Test case Passed!
 
+![image](https://user-images.githubusercontent.com/123479469/231429497-3d842749-c599-4a83-bea4-56c6f834f690.png)
 
+4. v = 10; a[] = {10,20,30}, expected = 0;
+
+Test case Passed!
+
+![image](https://user-images.githubusercontent.com/123479469/231430013-e83df95b-1729-40ea-b2a4-ffdcd63fb88c.png)
 
 
 # P2 
