--- a/202001097.md
+++ b/202001097.md
@@ -8,7 +8,7 @@
 # P1 
 - The function linearSearch searches for a value v in an array of integers a. If v appears in the array
 a, then the function returns the first index i, such that a[i] == v; otherwise, -1 is returned.
-
+<pre>
 public class lab7_1 {
 	public static int linearSearch(int v, int[] a) {
 	    int i = 0;
@@ -21,7 +21,7 @@ public class lab7_1 {
 	    return -1;
 	}
 }
-
+</pre>
 
 * Test Cases
 
