--- a/202001097.md
+++ b/202001097.md
@@ -53,17 +53,20 @@ Test case Passed!
 # P2 
 - The function countItem returns the number of times a value v appears in an array of integers a.
 
-int countItem(int v, int a[])
-{
-int count = 0;
-for (int i = 0; i < a.length; i++)
-{
-if (a[i] == v)
-count++;
+<prev>
+public class lab7_2 {
+	public static int countItem(int v, int a[])
+	{
+	int count = 0;
+	for (int i = 0; i < a.length; i++)
+	{
+	if (a[i] == v)
+	count++;
+	}
+	return (count);
+	}
 }
-return (count);
-}
-
+</prev>
 
 # P3 
 - The function binarySearch searches for a value v in an ordered array of integers a. If v appears in
