--- a/202001097.md
+++ b/202001097.md
@@ -53,7 +53,7 @@ Test case Passed!
 # P2 
 - The function countItem returns the number of times a value v appears in an array of integers a.
 
-<prev>
+<pre>
 public class lab7_2 {
 	public static int countItem(int v, int a[])
 	{
@@ -66,7 +66,15 @@ public class lab7_2 {
 	return (count);
 	}
 }
-</prev>
+</pre>
+
+* Test cases
+
+1. v = 3; a[] = {1,2,3,3,3}; expected = 3
+
+![image](https://user-images.githubusercontent.com/123479469/231432035-788e9c27-f557-48d7-9255-3ad9e3579a53.png)
+
+2. 
 
 # P3 
 - The function binarySearch searches for a value v in an ordered array of integers a. If v appears in
