--- a/202001097.md
+++ b/202001097.md
@@ -74,30 +74,27 @@ public class lab7_2 {
 
 ![image](https://user-images.githubusercontent.com/123479469/231432035-788e9c27-f557-48d7-9255-3ad9e3579a53.png)
 
-2. 
+2. v = 3; a[] = {1,2,4}; expected = 0
+
+![image](https://user-images.githubusercontent.com/123479469/231433724-7b6e9a7e-f082-4adc-8ad7-1dd4a27e20d8.png)
+
+3. v = 3; a[] = {}; expected = 0
+
+![image](https://user-images.githubusercontent.com/123479469/231433906-10d7d34e-529d-47c0-8c13-79ca406e0978.png)
+
+4. v = 10; a[] = {10, 20, 10}; expected = 1
+
+![image](https://user-images.githubusercontent.com/123479469/231434201-920886a5-55d0-4919-8a75-b2e8c5479135.png)
+
 
 # P3 
 - The function binarySearch searches for a value v in an ordered array of integers a. If v appears in
 the array a, then the function returns an index i, such that a[i] == v; otherwise, -1 is returned.
 Assumption: the elements in the array a are sorted in non-decreasing order.
 
-int binarySearch(int v, int a[])
-{
-int lo,mid,hi;
-lo = 0;
-hi = a.length-1;
-while (lo <= hi)
-{
-mid = (lo+hi)/2;
-if (v == a[mid])
-return (mid);
-else if (v < a[mid])
-hi = mid-1;
-else
-lo = mid+1;
-}
-return(-1);
-}
+<pre>
+
+</pre>
 
 # P4 
 - The following problem has been adapted from The Art of Software Testing, by G. Myers (1979). The
