--- a/202001097.md
+++ b/202001097.md
@@ -72,17 +72,25 @@ public class lab7_2 {
 
 1. v = 3; a[] = {1,2,3,3,3}; expected = 3
 
+Test case passed!
+
 ![image](https://user-images.githubusercontent.com/123479469/231432035-788e9c27-f557-48d7-9255-3ad9e3579a53.png)
 
 2. v = 3; a[] = {1,2,4}; expected = 0
+
+Test case passed!
 
 ![image](https://user-images.githubusercontent.com/123479469/231433724-7b6e9a7e-f082-4adc-8ad7-1dd4a27e20d8.png)
 
 3. v = 3; a[] = {}; expected = 0
 
+Test case passed!
+
 ![image](https://user-images.githubusercontent.com/123479469/231433906-10d7d34e-529d-47c0-8c13-79ca406e0978.png)
 
 4. v = 10; a[] = {10, 20, 10}; expected = 1
+
+test case failed!
 
 ![image](https://user-images.githubusercontent.com/123479469/231434201-920886a5-55d0-4919-8a75-b2e8c5479135.png)
 
@@ -94,7 +102,59 @@ Assumption: the elements in the array a are sorted in non-decreasing order.
 
 <pre>
 
+public class lab7_3 {
+	public static int binarySearch(int v, int a[])
+	{
+		int lo,mid,hi;
+		lo = 0;
+		hi = a.length-1;
+		while (lo <= hi)
+		{
+			mid = (lo+hi)/2;
+			if (v == a[mid])
+				return (mid);
+			else if (v < a[mid])
+				hi = mid-1;
+			else
+				lo = mid+1;
+		}
+		return(-1);
+	}
+}
 </pre>
+
+* Test Cases
+
+1. v = 3; a[] = {1,2,3,4,5}; expected = 3
+
+Test case failed!
+
+![image](https://user-images.githubusercontent.com/123479469/231435489-213b225a-f001-42fa-80ce-9ab8cfe829c2.png)
+
+2. v = 3; a[] = {1,2,3,4,5}; expected = 2
+
+Test case passed!
+
+![image](https://user-images.githubusercontent.com/123479469/231435612-70f56b7c-c137-40a3-bc52-07a591d34143.png)
+
+3. v = 5; a[] = {1,2,3,4,5,5}; expected = 4
+
+Test case passed!
+
+![image](https://user-images.githubusercontent.com/123479469/231436256-953c7385-b990-4654-9452-4dbe7f2e937d.png)
+
+4. v = 5; a[] = {1,2,3}; expected = -1
+
+Test case passed!
+
+![image](https://user-images.githubusercontent.com/123479469/231436516-7886ff36-198b-4224-906a-0758102997b7.png)
+
+5. v = 5; a[] = {1,2,3}; expected = 1
+
+Test case failed!
+
+![image](https://user-images.githubusercontent.com/123479469/231436707-bced6a82-3373-49c7-b879-1e6ca6dda421.png)
+
 
 # P4 
 - The following problem has been adapted from The Art of Software Testing, by G. Myers (1979). The
