--- a/202001097.md
+++ b/202001097.md
@@ -162,20 +162,27 @@ function triangle takes three integer parameters that are interpreted as the len
 triangle. It returns whether the triangle is equilateral (three lengths equal), isosceles (two lengths equal),
 scalene (no lengths equal), or invalid (impossible lengths).
 
-final int EQUILATERAL = 0;
-final int ISOSCELES = 1;
-final int SCALENE = 2;
-final int INVALID = 3;
-int triangle(int a, int b, int c)
-{
-if (a >= b+c || b >= a+c || c >= a+b)
-return(INVALID);
-if (a == b && b == c)
-return(EQUILATERAL);
-if (a == b || a == c || b == c)
-return(ISOSCELES);
-return(SCALENE);
+<pre>
+
+public class lab7_4 {
+	final int EQUILATERAL = 0;
+	final int ISOSCELES = 1;
+	final int SCALENE = 2;
+	final int INVALID = 3;
+	public  int triangle(int a, int b, int c)
+	{
+	if (a >= b+c || b >= a+c || c >= a+b)
+		return(INVALID);
+	if (a == b && b == c)
+		return(EQUILATERAL);
+	if (a == b || a == c || b == c)
+		return(ISOSCELES);
+		return(SCALENE);
+
+	}
 }
+
+</pre>
 
 # P5 
 - The function prefix (String s1, String s2) returns whether or not the string s1 is a prefix
