--- a/202001097.md
+++ b/202001097.md
@@ -184,6 +184,24 @@ public class lab7_4 {
 
 </pre>
 
+* Test cases
+
+1. a = 3; b=3; c = 3; expected = 0 (equilateral)
+
+Test case passed!
+
+![image](https://user-images.githubusercontent.com/123479469/231439820-05ac4751-85fb-40f9-9339-32ca43245bb9.png)
+
+2. a = 1, b= 2, c= 3; expected = 0
+
+Test case failed!
+
+![image](https://user-images.githubusercontent.com/123479469/231440133-80898353-58a9-41d7-93aa-e97644be8cde.png)
+
+3. a = -1, b = 2, c = 3, expected = 2
+
+
+
 # P5 
 - The function prefix (String s1, String s2) returns whether or not the string s1 is a prefix
 of string s2 (you may assume that neither s1 nor s2 is null).
