--- a/202001097.md
+++ b/202001097.md
@@ -200,6 +200,22 @@ Test case failed!
 
 3. a = -1, b = 2, c = 3, expected = 2
 
+Test case failed!
+
+![image](https://user-images.githubusercontent.com/123479469/231440695-fe68346d-6476-4173-93a9-4897a73735bd.png)
+
+4. a = 3, b = 2, c = 3, expected = 1
+
+Test case passed!
+
+![image](https://user-images.githubusercontent.com/123479469/231440916-6a51fe17-b10e-42e1-a183-6cae225606f1.png)
+
+4. a = 4, b = 2, c = 3, expected = 2
+
+Test case passed!
+
+![image](https://user-images.githubusercontent.com/123479469/231441123-bb6f0a32-b6ef-48ee-ae23-20eb0661ab9e.png)
+
 
 
 # P5 
