--- a/202001097.md
+++ b/202001097.md
@@ -222,21 +222,57 @@ Test case passed!
 - The function prefix (String s1, String s2) returns whether or not the string s1 is a prefix
 of string s2 (you may assume that neither s1 nor s2 is null).
 
-public static boolean prefix(String s1, String s2)
-{
-if (s1.length() > s2.length())
-{
-return false;
+<pre>
+public class lab7_5 {
+	public static boolean prefix(String s1, String s2)
+	{
+	if (s1.length() > s2.length())
+	{
+	return false;
+	}
+	for (int i = 0; i < s1.length(); i++)
+	{
+	if (s1.charAt(i) != s2.charAt(i))
+	{
+	return false;
+	}
+	}
+	return true;
+	}
 }
-for (int i = 0; i < s1.length(); i++)
-{
-if (s1.charAt(i) != s2.charAt(i))
-{
-return false;
-}
-}
-return true;
-}
+</pre>
+
+* Test cases
+
+1. String s1 = "abc", s2 = "abcd"; expected = true
+
+Test case passed!
+
+![image](https://user-images.githubusercontent.com/123479469/231484300-1db67a0b-2697-46ff-a5cb-8e6d58456ccd.png)
+
+2. String s1 = "abc", s2 = "ab"; expected = true
+
+Test case failed!
+
+![image](https://user-images.githubusercontent.com/123479469/231484719-7b59cbac-99d9-40da-8648-0dbb9e86201f.png)
+
+3. String s1 = "abc", s2 = "ab"; expected = false
+
+Test case passed!
+
+![image](https://user-images.githubusercontent.com/123479469/231485406-48e0c84d-f85d-4db4-a6a8-1a784e495018.png)
+
+4. String s1 = "abc", s2 = "abef"; expected = false
+
+Test case passed!
+
+![image](https://user-images.githubusercontent.com/123479469/231485967-583ca06a-05c2-4809-9540-24e43905990f.png)
+
+5. String s1 = "", s2 = "abef"; expected = true
+
+Test case passed!
+
+![image](https://user-images.githubusercontent.com/123479469/231486226-22e60e43-d013-4053-8310-6081467596a2.png)
 
 
 # P6 
