--- a/202001097.md
+++ b/202001097.md
@@ -298,3 +298,11 @@ f) For the boundary condition A2 + B2 = C2 case (right-angle triangle), identify
 g) For the non-triangle case, identify test cases to explore the boundary.
 
 h) For non-positive input, identify test points.
+
+
+
+# SECTION B
+
+1. Control Flow Graph
+
+![image](https://user-images.githubusercontent.com/123479469/231516744-1ec1e4b7-e4ed-42f6-8908-33a2906b55a6.png)
