--- a/202001097.md
+++ b/202001097.md
@@ -306,3 +306,51 @@ h) For non-positive input, identify test points.
 1. Control Flow Graph
 
 ![image](https://user-images.githubusercontent.com/123479469/231516744-1ec1e4b7-e4ed-42f6-8908-33a2906b55a6.png)
+
+2. Construct test sets for your flow graph that are adequate for the following criteria:
+a. Statement Coverage.
+b. Branch Coverage.
+c. Basic Condition Coverage.
+
+a) Statement coverage test sets: To achieve statement coverage, we need to make sure that every statement in the code is executed at least once.
+
+* Test cases 
+1. p is an empty vector
+2. p is a vector with one point
+3. p is a vector with two points having same y component
+4. p is a vector with two points having different y components
+5. p is a vector with three or more different points with different points with same y components
+6. p is a vector with three or more different points with different points with different y components
+
+b) Branch coverage test sets: To achieve branch coverage, we need to make sure that every possible branch in the code is taken at least once.
+
+* Test cases
+1. p is an empty vector
+2. p is a vector with one point
+3. p is a vector with two points having same y component
+4. p is a vector with two points having different y components
+5. p is a vector with three or more different points with different points with same y components and with same x components.
+6. p is a vector with three or more different points with different points with different y components and with same x components.
+7. p is a vector with three or more points with the same x and y components
+
+c) Basic condition coverage test sets: To achieve basic condition coverage, we need to make sure that every basic condition in the code is evaluated as both true and false at least once
+
+* Test cases
+1. p is an empty vector
+2. p is a vector with one point
+3. p is a vector with two points having same y component
+4. p is a vector with two points having different y components
+5. p is a vector with three or more different points with different points with same y components and with same x components.
+6. p is a vector with three or more different points with different points with different y components and with same x components.
+7. p is a vector with three or more points with the same x and y components
+8. p is a vector with some of them having same x component and all of them having same y component
+
+* Test cases examples: 
+1) p=[(x=2,y=3),(x=2,y=2),(x=1,y=5),(x=1,y=4)]
+2) p=[(x=5,y=6),(x=3,y=2),(x=3,y=4),(x=1,y=2)]
+3) p=[(x=5,y=6),(x=3,y=5),(x=1,y=5),(x=4,y=5),(x=2,y=7)]
+4) p=[(x=7,y=8)]
+5) p=[]
+
+These 5 test cases covers all - statement coverage, branch coverage and basic condition coverage. 
+
