--- a/202001097.md
+++ b/202001097.md
@@ -312,7 +312,7 @@ a. Statement Coverage.
 b. Branch Coverage.
 c. Basic Condition Coverage.
 
-a) Statement coverage test sets: To achieve statement coverage, we need to make sure that every statement in the code is executed at least once.
+a) Statement coverage test sets:
 
 * Test cases 
 1. p is an empty vector
@@ -322,7 +322,7 @@ a) Statement coverage test sets: To achieve statement coverage, we need to make 
 5. p is a vector with three or more different points with different points with same y components
 6. p is a vector with three or more different points with different points with different y components
 
-b) Branch coverage test sets: To achieve branch coverage, we need to make sure that every possible branch in the code is taken at least once.
+b) Branch coverage test sets: 
 
 * Test cases
 1. p is an empty vector
@@ -333,7 +333,7 @@ b) Branch coverage test sets: To achieve branch coverage, we need to make sure t
 6. p is a vector with three or more different points with different points with different y components and with same x components.
 7. p is a vector with three or more points with the same x and y components
 
-c) Basic condition coverage test sets: To achieve basic condition coverage, we need to make sure that every basic condition in the code is evaluated as both true and false at least once
+c) Basic condition coverage test sets: 
 
 * Test cases
 1. p is an empty vector
