--- a/202001097.md
+++ b/202001097.md
@@ -284,6 +284,31 @@ Determine the following for the above program:
 
 a) Identify the equivalence classes for the system
 
+Equivalence Classes will contain:
+1. All sides are positive, real numbers.
+2. One or more sides are negative or zero.
+3. The sum of the lengths of any two sides is less than or equal to the length of the remaining side.
+4. The sum of the lengths of any two sides is greater than the length of the remaining side.
+
+<pre>
+Examples
+
+E1 : a+b<=c (point 3)
+E2 : a+c<=b (point 3)
+E3 : b+c<=a (point 3)
+E4 : a=b, b=c, c=a
+E5 : a=b, a!=c 
+E6 : a=c, a!=b
+E7 : b=c, b!=a 
+E8 : a!=b ,b!=c, c!=a
+E9 : a^2 + b^2 = c^2 
+E10: b^2 + c^2 = a^2
+E11: a^2 + c^2 = b^2
+E12 : a+b>=c (point 4)
+E13 : a+c>=b (point 4)
+E14 : b+c>=a (point 4)
+</pre>
+
 b) Identify test cases to cover the identified equivalence classes. Also, explicitly mention which test case would cover which equivalence class.
 (Hint: you must need to be ensure that the identified set of test cases cover all identified equivalence classes)
 
