--- a/202001097.md
+++ b/202001097.md
@@ -310,21 +310,52 @@ E14 : b+c>=a (point 4)
 </pre>
 
 b) Identify test cases to cover the identified equivalence classes. Also, explicitly mention which test case would cover which equivalence class.
-(Hint: you must need to be ensure that the identified set of test cases cover all identified equivalence classes)
+
+* Test cases
+1. Right angled triangle (point 1 of (a)) - A = 5, B = 12, C = 13
+2. Equilateral triangle (point 1 of (a)) - A = 3, B = 3, C = 3
+3. Scalene triangle (point 1 of (a)) - A = 3, B = 4, C = 3
+4. Isosceles triangle (point 1 of (a)) - A = 3, B = 2, C =3
+4. Invalid Input - A = 1, B = 2, C = 3
+5. Invalid Input - A = 0, B = 4, C = -1
 
 c) For the boundary condition A + B > C case (scalene triangle), identify test cases to verify the boundary.
 
+* Test cases
+1. A = 5, B = 4, C =3
+2. A = 5, B = 1, C = 6
+3. A = 2, B = 3, C = 6
+
 d) For the boundary condition A = C case (isosceles triangle), identify test cases to verify the boundary.
+
+* Test cases
+1. A = 4, B = 3, C = 4
+2. A = 4, B = 3, C = 3.9
+3. A = 4, B = 3, C = 4.1
 
 e) For the boundary condition A = B = C case (equilateral triangle), identify test cases to verify the boundary.
 
+* Test cases
+1. A = 3, B = 3, C = 3
+2. A = 3, B = 2.9, C = 3.1
+
 f) For the boundary condition A2 + B2 = C2 case (right-angle triangle), identify test cases to verify the boundary.
+
+* Test cases
+1. A = 3, B = 4, C = 5
+2. A = 6, B = 8, C = 10
 
 g) For the non-triangle case, identify test cases to explore the boundary.
 
+* Test cases
+1. A = 2, B = 2, C = 4
+2. A = 2, B = 4, C = 2
+
 h) For non-positive input, identify test points.
 
-
+* Test cases
+1. A = -3, B = 3, C = 4.5
+2. A = 0, B = 4, C = 5
 
 # SECTION B
 
