--- a/202001097.md
+++ b/202001097.md
@@ -2,6 +2,48 @@
 
 # Section - A
 
+* Equivalence classes
+
+EC1 - date >=1 and date <= 31
+EC2 - date < 1
+EC3 - date > 31
+EC4 - month >= 1 and month <= 12
+EC5 - month < 1
+EC6 - month > 12
+EC7 - year >= 1900 and year <= 2015
+EC8 - year < 1900
+EC9 - year > 2015
+
+The dates should not be invalid - 31-02-2020 is an invalid date, since month 2 doesnot have 31 days.
+
+12 - 13 - 2005 is an example of out of range date.
+
+* Equivalent test cases
+
+EC1 - day - 3, month - 3, year - 2011
+output - 2-03-2011
+
+EC2 - day - 0, month - 3, year - 2012
+output - Invalid date
+
+EC3 - day - 41, month - 3, year - 2012
+output - Invalid date
+
+EC4 - day - 1, month - 1, year - 1980
+output - 31/12/1979
+
+EC5 - day - 20, month - -3, year - 2012
+output - Invalid date
+
+EC6 - day - 20, month - 15, year - 2013
+output - Invalid date
+
+EC8 - day - 5, month - 6, year - 1899
+output - Invalid date
+
+EC9 - day - 4, month - 3, year - 2021
+output - Invalid date
+
 
 # Programs
 
