--- a/202001097.md
+++ b/202001097.md
@@ -45,6 +45,33 @@ EC9 - day - 4, month - 3, year - 2021
 output - Invalid date
 
 
+* Valid dates - calculate previous dates
+
+1. 14-12-2011
+output - 13-12-2011
+
+2. 1-1-2014
+output - 31-12-2013
+
+* Invalid dates 
+
+1. 31-4-2016
+2. 14-45-1899
+
+* Out of range dates
+
+1. 15-4-1899
+2. 15-5-2022
+
+* Boundary Value Analysis
+
+1. Earliest date - 1-1-1900
+2. Last possible date - 31-12-2015
+3. leap year - 29-2-2000
+4. invalid leap year date - 29-2-2001
+5. previous of earliest date - 31-12-1899
+6. a day after latest date - 1-1-2016
+
 # Programs
 
 # P1 
