--- a/202001097.md
+++ b/202001097.md
@@ -92,6 +92,19 @@ public class lab7_1 {
 }
 </pre>
 
+<pre>
+* Equivalence Partitioning 
+
+if v is present in a ------------> return index of v
+if v is not present -------------> return -1
+
+* Boundary Value Analysis
+
+empty array -----> return -1
+not present -----> return -1
+present at i=0 ---. return 0
+</pre>
+
 * Test Cases
 
 1. v = 3; a[] = {1,2,3}; expected = 2
@@ -137,6 +150,19 @@ public class lab7_2 {
 }
 </pre>
 
+<pre>
+* Equivalence Partitioning 
+
+if v is present in a ------------> return number of times v appears
+if v is not present -------------> return 0
+
+* Boundary Value Analysis
+
+empty array -----> return 0
+not present -----> return 0
+present at i=0 ---> return 1
+present multiple times ----> return count
+</pre>
 * Test cases
 
 1. v = 3; a[] = {1,2,3,3,3}; expected = 3
