--- a/202001097.md
+++ b/202001097.md
@@ -3,7 +3,7 @@
 # Section - A
 
 * Equivalence classes
-
+<pre>
 EC1 - date >=1 and date <= 31
 EC2 - date < 1
 EC3 - date > 31
@@ -13,7 +13,7 @@ EC6 - month > 12
 EC7 - year >= 1900 and year <= 2015
 EC8 - year < 1900
 EC9 - year > 2015
-
+</pre>
 The dates should not be invalid - 31-02-2020 is an invalid date, since month 2 doesnot have 31 days.
 
 12 - 13 - 2005 is an example of out of range date.
