--- a/202001097.md
+++ b/202001097.md
@@ -18,6 +18,7 @@ The dates should not be invalid - 31-02-2020 is an invalid date, since month 2 d
 
 12 - 13 - 2005 is an example of out of range date.
 
+<pre>
 * Equivalent test cases
 
 EC1 - day - 3, month - 3, year - 2011
@@ -43,7 +44,9 @@ output - Invalid date
 
 EC9 - day - 4, month - 3, year - 2021
 output - Invalid date
+</pre>
 
+<pre>
 
 * Valid dates - calculate previous dates
 
@@ -52,16 +55,25 @@ output - 13-12-2011
 
 2. 1-1-2014
 output - 31-12-2013
+</pre>
+
+<pre>
 
 * Invalid dates 
 
 1. 31-4-2016
 2. 14-45-1899
+</pre>
+
+<pre>
 
 * Out of range dates
 
 1. 15-4-1899
 2. 15-5-2022
+</pre>
+
+<pre>
 
 * Boundary Value Analysis
 
@@ -71,6 +83,8 @@ output - 31-12-2013
 4. invalid leap year date - 29-2-2001
 5. previous of earliest date - 31-12-1899
 6. a day after latest date - 1-1-2016
+
+</pre>
 
 # Programs
 
