--- a/202001097.md
+++ b/202001097.md
@@ -232,6 +232,20 @@ public class lab7_3 {
 }
 </pre>
 
+<pre>
+* Equivalence Partitioning 
+
+if v is present in a ------------> return index of v
+if v is not present -------------> return -1
+
+* Boundary Value Analysis
+
+empty array -----> return -1
+not present -----> return -1
+present at i=0 ---. return 0
+</pre>
+
+
 * Test Cases
 
 1. v = 3; a[] = {1,2,3,4,5}; expected = 3
@@ -293,6 +307,27 @@ public class lab7_4 {
 
 </pre>
 
+<pre>
+* Equivalence Partitioning
+
+a+b<=c -----------> INVALID
+a=b=c ------------> Equilateral Triangle
+a=b<c ------------> Isosceles Triangle
+a<b<c ------------> Scalene Triangle
+
+* Boundary Value Analysis
+
+a+b<=c ------> Invalid
+b+c<=a ------> Invalid
+c+a<=b ------> Invalid
+a=b=c -------> Equilateral
+a=b<c -------> Isosceles
+b=c<a -------> Isosceles
+c=a<b -------> Isosceles
+a<b<c -------> Scalene
+
+</pre>
+
 * Test cases
 
 1. a = 3; b=3; c = 3; expected = 0 (equilateral)
@@ -349,6 +384,24 @@ public class lab7_5 {
 	return true;
 	}
 }
+</pre>
+
+<pre>
+* Equivalence Partitioning
+
+empty s1 and s2 -----> true
+empty s1 ------> true
+s1 prefix of s2 ---> true
+s1 not prefix of s2 ---> false
+s1 longer than s2 ----> false
+
+* Boundary value analysis
+
+empty s1 and s2 -----> true
+empty s1 ------> true
+s1 prefix of s2 ---> true
+s1 longer than s2 ----> false
+
 </pre>
 
 * Test cases
