--- a/202001097.md
+++ b/202001097.md
@@ -1,9 +1,11 @@
 # Lab-7_202001097
 
 # Section - A
+* Design the equivalence class test cases
 
-* Equivalence classes
 <pre>
+* Equivalence classes
+
 EC1 - date >=1 and date <= 31
 EC2 - date < 1
 EC3 - date > 31
@@ -13,10 +15,10 @@ EC6 - month > 12
 EC7 - year >= 1900 and year <= 2015
 EC8 - year < 1900
 EC9 - year > 2015
-</pre>
-The dates should not be invalid - 31-02-2020 is an invalid date, since month 2 doesnot have 31 days.
 
+The dates should not be invalid - 31-02-2020 is an invalid date, since month 2 doesnot have 31 days.
 12 - 13 - 2005 is an example of out of range date.
+</pre>
 
 <pre>
 * Equivalent test cases
