--- a/202001097.md
+++ b/202001097.md
@@ -535,16 +535,18 @@ c. Basic Condition Coverage.
 a) Statement coverage test sets:
 
 * Test cases 
+<pre>
 1. p is an empty vector
 2. p is a vector with one point
 3. p is a vector with two points having same y component
 4. p is a vector with two points having different y components
 5. p is a vector with three or more different points with different points with same y components
 6. p is a vector with three or more different points with different points with different y components
-
+</pre>
 b) Branch coverage test sets: 
 
 * Test cases
+<pre>
 1. p is an empty vector
 2. p is a vector with one point
 3. p is a vector with two points having same y component
@@ -552,10 +554,12 @@ b) Branch coverage test sets:
 5. p is a vector with three or more different points with different points with same y components and with same x components.
 6. p is a vector with three or more different points with different points with different y components and with same x components.
 7. p is a vector with three or more points with the same x and y components
+</pre>
 
 c) Basic condition coverage test sets: 
 
 * Test cases
+<pre>
 1. p is an empty vector
 2. p is a vector with one point
 3. p is a vector with two points having same y component
@@ -564,13 +568,15 @@ c) Basic condition coverage test sets:
 6. p is a vector with three or more different points with different points with different y components and with same x components.
 7. p is a vector with three or more points with the same x and y components
 8. p is a vector with some of them having same x component and all of them having same y component
-
+</pre>
 * Test cases examples: 
+<pre>
 1) p=[(x=2,y=3),(x=2,y=2),(x=1,y=5),(x=1,y=4)]
 2) p=[(x=5,y=6),(x=3,y=2),(x=3,y=4),(x=1,y=2)]
 3) p=[(x=5,y=6),(x=3,y=5),(x=1,y=5),(x=4,y=5),(x=2,y=7)]
 4) p=[(x=7,y=8)]
 5) p=[]
+</pre>
 
 These 5 test cases covers all - statement coverage, branch coverage and basic condition coverage. 
 
